# vxlros2

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: ci.yml  hil.yml
docs/: DEV_VM.md  HIL_SETUP.md  README_zh.md  SMOKE_TEST.md  USAGE.md  architecture.md
scripts/: install_ros2_humble.sh  ros-humble.yaml  smoke_test_real.sh
vxl_camera/: CMakeLists.txt  package.xml
vxl_camera/config/: default.yaml  vxl435.yaml  vxl615.yaml
vxl_camera/include/vxl_camera/: camera_backend.hpp  filter_chain.hpp  frame_utils.hpp  mock_camera_backend.hpp  node_helpers.hpp  point_cloud_generator.hpp  sensor_options.hpp  stream_manager.hpp  vxl_camera_lifecycle_node.hpp  vxl_camera_node.hpp
vxl_camera/launch/: multi_camera.launch.py  multi_camera_composable.launch.py  vxl435.launch.py  vxl615.launch.py  vxl_camera.launch.py  vxl_camera_lifecycle.launch.py
vxl_camera/src/: filter_chain.cpp  frame_utils.cpp  main.cpp  main_lifecycle.cpp  node_helpers.cpp  point_cloud_generator.cpp  sdk_camera_backend.cpp  sensor_options.cpp  stream_manager.cpp  vxl_camera_lifecycle_node.cpp  vxl_camera_node.cpp
vxl_camera/test/: mock_lifecycle_main.cpp  test_filter_chain.cpp  test_frame_utils.cpp  test_integration.launch.py  test_lifecycle_launch.py  test_lifecycle_with_mock.cpp  test_node_with_mock.cpp  test_output_mode.cpp  test_point_cloud.cpp  test_sdk_camera_backend.cpp  test_sensor_options.cpp
vxl_camera_msgs/: CMakeLists.txt  package.xml
vxl_camera_msgs/msg/: DeviceInfo.msg  Extrinsics.msg  Metadata.msg  RGBD.msg
vxl_camera_msgs/srv/: GetDeviceInfo.srv  GetInt32.srv  SetInt32.srv
vxl_description/: CMakeLists.txt  package.xml
vxl_description/launch/: description.launch.py
vxl_description/urdf/: vxl_camera.urdf.xacro
vxlsdk/: README.md
vxlsense-sdk/: README.md
