<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vxl_camera</name>
  <version>0.1.4</version>
  <description>ASVXL (VXL435 / VXL6X5) depth camera ROS2 driver</description>
  <maintainer email="dev@asvoxel.com">asvoxel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>diagnostic_updater</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vxl_camera_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>diagnostic_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
